---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE INDEX pointloc ON points USING gist (box(location,location));"
---
IndexStmt@0..68
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..21 "pointloc"
  Whitespace@21..22 " "
  On@22..24 "ON"
  Whitespace@24..25 " "
  RangeVar@25..31
    Ident@25..31 "points"
  Whitespace@31..32 " "
  Using@32..37 "USING"
  Whitespace@37..38 " "
  Ident@38..42 "gist"
  Whitespace@42..43 " "
  Ascii40@43..44 "("
  IndexElem@44..65
    FuncCall@44..65
      Ident@44..47 "box"
      Ascii40@47..48 "("
      ColumnRef@48..56
        Location@48..56 "location"
      Ascii44@56..57 ","
      ColumnRef@57..65
        Location@57..65 "location"
  Ascii41@65..66 ")"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

